https://jira.fingo.info/browse/IJ-199 For admin, add options for removing special absences (#102)